--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@ngui/map": "0.30.3",
     "@types/googlemaps": "3.39.14",
     "ajv": "6.12.5",
+    "angular2-multiselect-dropdown": "^5.0.4",
     "bootstrap": "4.5.2",
     "bootstrap-notify": "3.1.3",
     "bootstrap-select": "1.13.18",
