--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "jvectormap": "2.0.4",
     "jw-bootstrap-switch-ng2": "2.0.5",
     "ngx-chips": "2.1.0",
+    "ngx-pagination": "^5.1.1",
     "nouislider": "14.6.2",
     "perfect-scrollbar": "1.5.0",
     "popper.js": "1.16.1",
