--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@adactive/bootstrap-tagsinput": "0.8.2",
     "@agm/core": "1.1.0",
     "@angular/animations": "10.1.5",
+    "@angular/cdk": "^10.2.7",
     "@angular/common": "10.1.5",
     "@angular/compiler": "10.1.5",
     "@angular/core": "10.1.5",
     "@angular/forms": "10.1.5",
     "@angular/http": "7.2.16",
     "@angular/localize": "^10.1.5",
+    "@angular/material": "^10.2.7",
     "@angular/platform-browser": "10.1.5",
     "@angular/platform-browser-dynamic": "10.1.5",
     "@angular/router": "10.1.5",
