--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "@angular/platform-browser": "10.1.5",
     "@angular/platform-browser-dynamic": "10.1.5",
     "@angular/router": "10.1.5",
+    "@fullcalendar/angular": "^5.11.0",
+    "@fullcalendar/daygrid": "^5.11.0",
+    "@fullcalendar/interaction": "^5.11.0",
     "@ng-bootstrap/ng-bootstrap": "7.0.0",
     "@ngui/map": "0.30.3",
     "@types/googlemaps": "3.39.14",
