--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "jw-bootstrap-switch-ng2": "2.0.5",
     "ngx-chips": "2.1.0",
     "ngx-pagination": "^5.1.1",
+    "ngx-star-rating": "^2.0.2",
     "nouislider": "14.6.2",
     "pdfmake": "^0.1.72",
     "perfect-scrollbar": "1.5.0",
