--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,7 @@
               "node_modules/perfect-scrollbar/css/perfect-scrollbar.css",
               "node_modules/sweetalert2/src/sweetalert2.scss",
               "src/assets/scss/paper-dashboard.scss",
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/assets/css/demo.css"
             ],
             "scripts": [
@@ -141,6 +142,7 @@
               "node_modules/perfect-scrollbar/css/perfect-scrollbar.css",
               "node_modules/sweetalert2/src/sweetalert2.scss",
               "src/assets/scss/paper-dashboard.scss",
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/assets/css/demo.css"
             ],
             "assets": [
